[gd_scene load_steps=2 format=3 uid="uid://sv66eh7btrec"]

[ext_resource type="Script" path="res://btn.gd" id="1_5ytpf"]

[node name="PanelConnection" type="Panel"]
custom_minimum_size = Vector2(100, 100)
offset_left = 334.0
offset_top = 3.0
offset_right = 656.0
offset_bottom = 283.0

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.088
anchor_bottom = 0.036
offset_left = 109.0
offset_top = 22.0
offset_right = 165.616
offset_bottom = 37.308
text = "Connection"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 61.0
offset_right = 268.0
offset_bottom = 179.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "IP Adresse"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Port"

[node name="LineEdit3" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Nickname"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 190.0
offset_right = 219.0
offset_bottom = 221.0
text = "Connect"
script = ExtResource("1_5ytpf")

[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
